# opc_ua

api_client/: CMakeLists.txt  main.cpp
api_client/include/: methods.h  opcua_client.h  subscriptions.h
api_client/src/: main.cpp  methods.cpp  opcua_client.cpp  subscriptions.cpp
api_session/: CMakeLists.txt
api_session/include/: opcua_session.h
api_session/src/: main.cpp  opcua_session.cpp
opcua_server/: test_serverOPCUA.py
server_methods_client/: CMakeLists.txt  main.cpp
test_api/: CMakeLists.txt  main.cpp
test_client/: CMakeLists.txt  main.cpp
test_client1/: CMakeLists.txt  main.cpp
